2008-02-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Correct a bug in the setSelected
	function which was causing it to toggle the selection rather than set
	it as the calling functions were expecting.

	* avogadro/src/mainwindow.cpp: Revert the earlier fix as setSelected
	now works as expected.

	* libavogadro/src/tools/selectrotatetool.cpp: Select atom should now
	also select bonds as well as atoms correctly.

	* avogadro/src/extensions/forcefieldextension.cpp: Disable the
	constraints menu item for now.

	* libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/orbitalsettingswidget.ui: Defaulted to not use
	interpolation, added a check box that will force interpolation.

	* libavogadro/src/engines/iso.h: Fixed the integer index based eval
	function to actually use the m_iso value set.

	* libavogadro/src/engines/iso.*: Added a new marching cubes function
	that does not use interpolation. This should significantly reduce the
	resources needed to calculated many surfaces.

	* libavogadro/src/engines/surfaceengine.cpp: Ported to use the new
	IsoGen class without interpolation - we calculate the VdW surface and
	so should never need to interpolate values.

	* libavogadro/src/engines/orbitalengine.cpp: Ported to continue
	interpolating for now. This engine should have optional interpolation
	but I need to hunt down a bug in the code first.

2008-02-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/surfaceengine.cpp: Update the surface engine
	to use the new features of the GridData class - requires fresh OB SVN.

2008-02-21  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Fixed up some of the makeCurrent and
	doneCurrent calls - should hopefully increase stability although I
	think threaded GL still needs some love (as well as my ATI driver!)

	* libavogadro/src/tools/manipulatetool.cpp,
	libavogadro/src/tools/navigatetool.cpp: Provide more visual cues by