@@ -54,7 +54,7 @@ namespace Avogadro {
       //@{
       bool renderOpaque(PainterDevice *pd);
       bool renderTransparent(PainterDevice *pd);
-      bool renderQuick(PainterDevice *pd, bool);
+      bool renderQuick(PainterDevice *pd);
       //@}
 
       double transparencyDepth() const;
